No additional memory needed for unit tests right now.\nSo remove argLine for surefire